--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 repository = "https://github.com/cyteon/modu"
 homepage = "https://cyteon.tech/modu"
 description = "A fast and simple interpreted language"
+documentation = "https://www.cyteon.tech/modu/docs/quickstart"
 license = "MIT"
 authors = ["Cyteon"]
 keywords = ["programming-language", "cli", "interprter", "language"]
