--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -13,4 +13,5 @@ keywords = ["programming-language", "cli", "interpreter", "language"]
 [dependencies]
 bat = "0.24.0"
 logos = "0.15.0"
+rand = "0.8.5"
 rouille = "3.6.2"
