--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -15,4 +15,5 @@ bat = "0.24.0"
 chrono = "0.4.39"
 logos = "0.15.0"
 rand = "0.8.5"
+reqwest = { version = "0.12.11", features = ["blocking"] }
 rouille = "3.6.2"
