this was supposed to be in first commit but i forgot to add, it also has panic test thingy

--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["programming-language", "cli", "interpreter", "language"]
 [dependencies]
 bat = "0.24.0"
 chrono = "0.4.39"
+libloading = "0.8.6"
 logos = "0.15.0"
 rand = "0.8.5"
 reqwest = { version = "0.12.11", features = ["blocking", "json"] }
