--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["programming-language", "cli", "interpreter", "language"]
 [dependencies]
 bat = "0.24.0"
 chrono = "0.4.39"
+libffi = "3.2.0"
 libloading = "0.8.6"
 logos = "0.15.0"
 rand = "0.8.5"
