--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -23,3 +23,4 @@ serde_json = "1.0.134"
 toml = "0.8.19"
 zip = "2.2.2"
 openssl = { version = "0.10", features = ["vendored"] }
+uuid = { version = "1.13.1", features = ["v4"]}
