Update website link

--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -3,9 +3,9 @@ name = "modu"
 version = "0.6.0"
 edition = "2021"
 repository = "https://github.com/cyteon/modu"
-homepage = "https://cyteon.tech/modu"
+homepage = "https://modu.cyteon.dev"
 description = "A fast and simple interpreted language"
-documentation = "https://www.cyteon.tech/modu/docs/quickstart"
+documentation = "https://modu.cyteon.dev/docs/quickstart"
 license = "MIT"
 authors = ["Cyteon"]
 keywords = ["programming-language", "cli", "interpreter", "language"]
